fixed wrapping navbar button

--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ section {
 	background: white;
 }
 
+.navbar .container {
+	flex-wrap: nowrap;
+}
+
 .navbar-brand {
 	font-family: "Raleway", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 	font-size: 3rem;
